--- a/styling.css
+++ b/styling.css
@@ -13,7 +13,8 @@ button{
     font-family: 'Courier New', Courier, monospace;
     font-size: large;
     transition-duration: 0.4s;
-    border-color: black;
+    border-color: solid black;
+    border-width: 3px;
 }
 button:hover{
     background-color: white !important;
