--- a/styling.css
+++ b/styling.css
@@ -1,7 +1,33 @@
 html{
     scroll-behavior: smooth;
+    font-size: 62%;
+    box-sizing: border-box;
 }
-
+@media (max-width: 1500px) {
+html {
+    font-size:57.25%
+}
+}
+@media (max-width: 1200px) {
+html {
+    font-size:50%
+}
+}
+@media (max-width: 770px) {
+html {
+    font-size:43.75%
+}
+}
+@media (max-width: 615px) {
+html {
+    font-size:40%
+}
+}
+@media (max-width: 350px) {
+html {
+    font-size:35%
+}
+}
 .buttons{
     display: flex;
     justify-content: space-evenly;
@@ -84,6 +110,17 @@ body{
     flex-direction: column;
     align-items: center;
 }
+@media (max-width: 1500px) {
+    .about {
+        width:1100px
+    }
+}
+
+@media (max-width: 1200px) {
+    .about {
+        width:auto
+    }
+}
 .links{
     min-height: 100vh;
     width: 1300px;
@@ -130,6 +167,39 @@ a:hover{
     margin-bottom: 13rem;
     color: white;
 }
+.about-content{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+@media (max-width: 1300px) {
+    .about-content {
+        flex-direction:column
+    }
+}
+.profile{
+    position: relative;
+    align-self: center;
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 500;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+@media (max-width: 1301px) {
+    .profile {
+        margin-bottom:10rem;
+    }
+}
+
+@media (max-width: 1000px) {
+    .profile {
+        margin-bottom:7rem
+    }
+}
 .link-head{
     position: relative;
     font-size: 5.5rem;
@@ -143,4 +213,11 @@ a:hover{
     width: 500px;
     line-height: 1.8;
     font-size: 1.8rem;
+}
+@media (max-width: 600px) {
+    .profile-text {
+        width:80vw;
+        margin-left: auto;
+        margin-right: auto
+    }
 }
