--- a/styling.css
+++ b/styling.css
@@ -130,6 +130,17 @@ body{
     flex-direction: column;
     align-items: center;
 }
+@media (max-width: 1500px) {
+    .links {
+        width:1100px
+    }
+}
+
+@media (max-width: 1200px) {
+    .links {
+        width:auto
+    }
+}
 .nav{
     display: flex;
     margin-right: 12rem;
@@ -138,6 +149,17 @@ body{
     letter-spacing: 1px;
     list-style-type: none;
     gap: 2rem;
+}
+@media (max-width: 1200px) {
+    .nav {
+        margin-right:3rem
+    }
+}
+
+@media (max-width: 700px) {
+    .nav {
+        margin-right:0
+    }
 }
 .nav-bar{
     position: sticky;
@@ -149,6 +171,11 @@ body{
     height: 5rem;
     border-bottom: 1px solid black;
     background-color: rgba(40,40,40,0.95);
+}
+@media (max-width: 700px) {
+    .nav-bar {
+        justify-content:center
+    }
 }
 .link{
     color: white;
