--- a/styling.css
+++ b/styling.css
@@ -32,7 +32,8 @@ html {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 50%;
+    align-self: center;
+    width: 60rem;
     margin: auto;
     margin-top: 3%;
 }
@@ -78,11 +79,12 @@ body{
     margin-right: auto;
 }
 .heading1, .heading2{
-    font-size: 6rem;
+    font-size: 5.5rem;
 }
 .view-arr{
     position: relative;
     display: flex;
+    justify-content: center;
     align-items: center;
     margin-top: 2.4rem;
     padding: 0.8rem 3rem;
