--- a/styling.css
+++ b/styling.css
@@ -33,7 +33,7 @@ html {
     justify-content: space-evenly;
     align-items: center;
     align-self: center;
-    width: 60rem;
+    width: 50%;
     margin: auto;
     margin-top: 3%;
 }
