--- a/styling.css
+++ b/styling.css
@@ -20,7 +20,7 @@ html {
 }
 @media (max-width: 615px) {
 html {
-    font-size:35%
+    font-size:40%
 }
 }
 @media (max-width: 350px) {
@@ -33,7 +33,7 @@ html {
     justify-content: space-evenly;
     align-items: center;
     align-self: center;
-    width: 50%;
+    width: fit-content;
     margin: auto;
     margin-top: 3%;
 }
@@ -80,6 +80,7 @@ body{
 }
 .heading1, .heading2{
     font-size: 5.5rem;
+    text-align: center;
 }
 .view-arr{
     position: relative;
